// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`чистит данные иждивенца 1`] = `
Object {
  "not_employed": Object {},
}
`;

exports[`чистит данные работящего 1`] = `
Object {
  "employed": Object {
    "employee": Object {},
  },
}
`;

exports[`чистит данные самозанятого 1`] = `
Object {
  "employed": Object {
    "self_employed": Object {},
  },
}
`;
